--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/django-rickroll
+      url: https://pypi.org/p/django-bot-rickroll
 
     permissions:
       id-token: write
