ci: use prek to manage tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         run: uv run prek --all-files
 
       - name: 🧪 Run tests
-        run: uv run pytest
+        run: uv run prek --all-files --hook-stage pre-push
