--- a/.pre-commit-config.yml
+++ b/.pre-commit-config.yml
@@ -72,7 +72,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: pytest
+        entry: uv run pytest
         language: system
         pass_filenames: false
         stages: [pre-push]
